
syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscodingFol";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Followers {
	rpc GetUserFollowings(Identificator) returns (ListFollowingResponse) {
		option (google.api.http) = {
			get: "/api/follower/user-followings/{id}"
		};
	}

	rpc GetUserFollowers(Identificator) returns (ListFollowingResponse) {
		option (google.api.http) = {
			get: "/api/follower/user-followers/{id}"
		};
	}

	rpc GetUserRecommendations(Identificator) returns (ListFollowingResponse) {
		option (google.api.http) = {
			get: "/api/follower/user-recommendations/{id}"
		};
	}

	rpc CreateNewFollowing(FollowingCreateRequest) returns (FollowerResponse) {
		option (google.api.http) = {
			post: "/api/follower/create"
			body: "*"
		};
	}

	rpc UnfollowUser(UserUnfollowRequest) returns (FollowerResponse) {
		option (google.api.http) = {
			put: "/api/follower/unfollow"
			body: "*"
		};
	}

}

message Identificator {
	int64 id = 1;
}

message FollowingResponse {
	string userId = 1;
    string username = 2;
    string profileImage = 3;
}

message ListFollowingResponse {
	repeated FollowingResponse list = 1;
}

message FollowingCreateRequest {
	string userId  = 1;
    string username  = 2;
    string profileImage  = 3;
    string followingUserId  = 4;
    string followingUsername  = 5;
    string followingProfileImage  = 6;
}

message UserUnfollowRequest {
	string userId  = 1;
	string userToUnfollowId  = 2;
}

message FollowerResponse {
	int64 id = 1;
    int64 userId = 2;
	int64 followedById = 3;
}